# python_taz

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  dependency.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  rebuild_doc.md  run_consumers.sh  run_helper.sh  run_pollers.sh  setup.cfg  sonar-project.properties  towncrier_template.rst
.gitlab/ci/: common.yml  production.yml  sandbox.yml
.gitlab/merge_request_templates/: MergeRequest.md
docs/: index.md  mongodb_indexes.md  mongodb_populate_products.md
docs/api/: badges.md  blacklist.md  classifications_rules.md  enriched_products.md  entities.md  matching.md  metrics.md  notification.md  pending.md  price_lock.md  products.md  rebuild.md  review.md  score.md  score_criterias.md  score_weight.md
docs/catalog-integrations/: duplicated_bundles.md  seller_product_without_image.md  v1_returns_no_product.md
docs/consumers/: category.md  factsheet.md  label.md  media.md  price_stock.md  product.md
docs/infra/: consumers.md  index.md  pollers.md  rebuild.md  sqs.md
docs/notifications/: index.md
docs/projects/: docs.md  logs-dashboards.md  urls.md
requirements/: base.txt  dev.txt  docs.txt  mssql.txt  production.txt  test.txt
taz/: conftest.py  constants.py  main.py  main.sh  utils.py
taz/api/: Makefile  __init__.py  commands.py  conftest.py  utils.py  version.py
taz/consumers/: Makefile  conftest.py  main.py
taz/crontabs/: base.py
taz/helpers/: category.py  format.py  gchat.py  html.py  isbn.py  json.py  lock_manager.py  logging.py  (+7 more)
(+580 files in other folders)
