[metadata]
name = "taz"
version = "2.481.1"
description = ""
authors = ["Author here"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.pytest]
env = "D:SIMPLE_SETTINGS=taz.settings.test"

[tool.towncrier]
    package = 'taz'
    package_dir = '.'
    filename = 'CHANGELOG.md'
    directory = 'changelog.d'
    template = 'towncrier_template.rst'

    [[tool.towncrier.type]]
        directory = 'feature'
        name = 'Features'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'bugfix'
        name = 'Bugfixes'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'doc'
        name = 'Improved Documentation'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'removal'
        name = 'Deprecations and Removals'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'misc'
        name = 'Misc'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'health'
        name = 'Health'
        showcontent = true
